fix touch and z-index

--- a/main.css
+++ b/main.css
@@ -82,7 +82,8 @@ body {
     grid-template-columns: repeat(1, min(6vw, 40px));
     grid-template-rows: repeat(1, min(6vw, 40px));
     grid-column-gap: 0px;
-    grid-row-gap: 0px;    
+    grid-row-gap: 0px;  
+    z-index: 1;  
 }
 
 #board_div div {
@@ -118,6 +119,7 @@ body {
     display: flex;
     justify-content: center;
     margin-top: 2vh;
+    z-index: 1;
 }
 #solution {
     justify-content: center;
